--- a/Tukas.DMSExportUcto/DMSExportUcto.csproj
+++ b/Tukas.DMSExportUcto/DMSExportUcto.csproj
@@ -86,11 +86,11 @@
     <Compile Include="DMSExport.cs" />
     <Compile Include="DMSExportConst.cs" />
     <Compile Include="Extensions\ExceptionExtensions.cs" />
-    <Compile Include="Log\EventLogger.cs" />
-    <Compile Include="Log\EventLogData.cs" />
-    <Compile Include="Log\ExportLogData.cs" />
-    <Compile Include="Log\ExportLogger.cs" />
-    <Compile Include="Log\LogState.cs" />
+    <Compile Include="Logginig\EventLogger.cs" />
+    <Compile Include="Logginig\EventLogData.cs" />
+    <Compile Include="Logginig\ExportLogData.cs" />
+    <Compile Include="Logginig\ExportLogger.cs" />
+    <Compile Include="Logginig\LogState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Cipher.cs" />
