--- a/DMSExportUcto/DMSExportUcto.csproj
+++ b/DMSExportUcto/DMSExportUcto.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>DMSExportUcto</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>C:\Projects\Tukas\Build\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <AutorunEnabled>true</AutorunEnabled>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -56,10 +56,16 @@
     <ManifestKeyFile>DMSExportUcto_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Oracle.DataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
@@ -86,11 +92,11 @@
     <Compile Include="DMSExport.cs" />
     <Compile Include="DMSExportConst.cs" />
     <Compile Include="Extensions\ExceptionExtensions.cs" />
-    <Compile Include="Logginig\EventLogger.cs" />
-    <Compile Include="Logginig\EventLogData.cs" />
-    <Compile Include="Logginig\ExportLogData.cs" />
-    <Compile Include="Logginig\ExportLogger.cs" />
-    <Compile Include="Logginig\LogState.cs" />
+    <Compile Include="Logging\EventLogger.cs" />
+    <Compile Include="Logging\EventLogData.cs" />
+    <Compile Include="Logging\ExportLogData.cs" />
+    <Compile Include="Logging\ExportLogger.cs" />
+    <Compile Include="Logging\LogState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Cipher.cs" />
@@ -100,7 +106,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="DMSExportUcto_TemporaryKey.pfx" />
+    <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
