Fixes - removed PFX

--- a/Tukas.DMSExportUcto/Tukas.DMSExportUcto.csproj
+++ b/Tukas.DMSExportUcto/Tukas.DMSExportUcto.csproj
@@ -57,10 +57,16 @@
     <ManifestKeyFile>Tukas.DMSExportUcto_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
@@ -101,7 +107,7 @@
     <None Include="App.config" />
     <None Include="DMSExportUcto.csproj" />
     <None Include="packages.config" />
-    <None Include="Tukas.DMSExportUcto_TemporaryKey.pfx" />
+    <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
